Revision history for {{ $dist->name }}

{{$NEXT}}
  [Enhancements]
  - column_info_from_type checks type library names.

  [Bug Fixes]
  - column_info_from_type checks that the type isa Type::Tiny object.

v0.2.1    2018-11-10 22:17:54+00:00 Europe/London
  [Bug Fixes]
  - Clean namespaces.

  - Frozen coercions.

  [Documentation]
  - Added INSTALL file to the distribution.

  - Bumped copyright year.

  [Toolchain]
  - Use a different Pod::Coverage plugin.

v0.2.0    2018-09-16 21:23:54+01:00 Europe/London
  [Enhancements]
  - Types::SQL::Util translates the following types:
     * PositiveOrZeroInt
     * Num
     * PositiveOrZeroNum
     * InstanceOf['DateTime::Tiny']
     * ArrayRef

  [Documentation]
  - Corrected typos.

v0.1.3    2017-12-20 12:53:52+00:00 Europe/London
  [Enhancements]
  - Types::SQL::Util translates a Bool into a boolean.

  [Documentation]
  - Updated using POD::Weaver.

  - README is now in Markdown.

  [Toolchain]
  - Updated dist.ini.

  - Extra tests are now part of Dist::Zilla build.

v0.1.2    2017-12-11 23:04:53+00:00 Europe/London
  [Other Changes]
  - Change how Dist::Zilla manages versions

0.1.1     2017-12-11 18:05:03+00:00 Europe/London
  [Other Changes]
  - Include more metadata in META.yml

  - Use Dist::Zilla to set module versions and update contributor
    metadata. This will also remove the dependency on version.

  - Move strictures to make Perl::Critic happy.

v0.1.0    2017-12-10 23:43:59+00:00 Europe/London
  [Documentation]
  - Fixed typo.

  - Bumped copyright year.

  [Other Changes]
  - No longer requires strictures module.

  - Ref::Uil::XS is recommended.

v0.0.3    2016-01-14 13:40:05+00:00 Europe/London
  [Enhancements]
  - Added support for datetime data types [GitHub #1].

  [Bug Fixes]
  - Fixed testing module version prerequisites.

  - Set minimum version of Type::Tiny to v0.44.

  [Other Changes]
  - Added more QA tests for developers.

  - Added META.json to the distribution.
